--- a/main.html
+++ b/main.html
@@ -7,7 +7,55 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+	<div>
+		<button data-ns-test="block-inline-button"></button>
+		<button data-ns-test="block-inline-button"></button>
+	</div>
+	
+	<div data-ns-test="block-inline-div">1</div>
+	<div data-ns-test="block-inline-div">2</div>
+	
+	<div>
+		<span data-ns-test="block-inline-span">1</span>
+		<span data-ns-test="block-inline-span">2</span>
+	</div>
+	
+	<div>
+		<p data-ns-test="block-inline-p">1</p>
+		<p data-ns-test="block-inline-p">2</p>
+	</div>
+	
+	<div>
+		<input data-ns-test="block-inline-input">
+		<input data-ns-test="block-inline-input">
+	</div>
+	
+	<div>
+		<cite data-ns-test="block-inline-cite">1</cite>
+		<cite data-ns-test="block-inline-cite">2</cite>
+	</div>
+	
+	<div>
+		<code data-ns-test="block-inline-code">1</code>
+		<code data-ns-test="block-inline-code">2</code>
+	</div>
+	
+	<div>
+		<h1 data-ns-test="block-inline-h1">1</h1>
+		<h1 data-ns-test="block-inline-h1">2</h1>
+	</div>
+	
+	<div>
+		<sup data-ns-test="block-inline-sup">1</sup>
+		<sup data-ns-test="block-inline-sup">2</sup>
+	</div>
+	
+	<div>
+		<sub data-ns-test="block-inline-sub">1</sub>
+		<sub data-ns-test="block-inline-sub">2</sub>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
