--- a/main.html
+++ b/main.html
@@ -9,21 +9,21 @@
 <body>
 	
 	<div>
-		<button data-ns-test="block-inline-button"></button>
-		<button data-ns-test="block-inline-button"></button>
+		<button data-ns-test="block-inline-button">Test1</button>
+		<button data-ns-test="block-inline-button">Test2</button>
 	</div>
 	
-	<div data-ns-test="block-inline-div">1</div>
-	<div data-ns-test="block-inline-div">2</div>
+	<div data-ns-test="block-inline-div">Test1</div>
+	<div data-ns-test="block-inline-div">Test2</div>
 	
 	<div>
-		<span data-ns-test="block-inline-span">1</span>
-		<span data-ns-test="block-inline-span">2</span>
+		<span data-ns-test="block-inline-span">Test1</span>
+		<span data-ns-test="block-inline-span">Test2</span>
 	</div>
 	
 	<div>
-		<p data-ns-test="block-inline-p">1</p>
-		<p data-ns-test="block-inline-p">2</p>
+		<p data-ns-test="block-inline-p">Test1</p>
+		<p data-ns-test="block-inline-p">Test2</p>
 	</div>
 	
 	<div>
@@ -32,28 +32,28 @@
 	</div>
 	
 	<div>
-		<cite data-ns-test="block-inline-cite">1</cite>
-		<cite data-ns-test="block-inline-cite">2</cite>
+		<cite data-ns-test="block-inline-cite">Test1</cite>
+		<cite data-ns-test="block-inline-cite">Test2</cite>
 	</div>
 	
 	<div>
-		<code data-ns-test="block-inline-code">1</code>
-		<code data-ns-test="block-inline-code">2</code>
+		<code data-ns-test="block-inline-code">Test1</code>
+		<code data-ns-test="block-inline-code">Test2</code>
 	</div>
 	
 	<div>
-		<h1 data-ns-test="block-inline-h1">1</h1>
-		<h1 data-ns-test="block-inline-h1">2</h1>
+		<h1 data-ns-test="block-inline-h1">Test1</h1>
+		<h1 data-ns-test="block-inline-h1">Test2</h1>
 	</div>
 	
 	<div>
-		<sup data-ns-test="block-inline-sup">1</sup>
-		<sup data-ns-test="block-inline-sup">2</sup>
+		<sup data-ns-test="block-inline-sup">Test1</sup>
+		<sup data-ns-test="block-inline-sup">Test2</sup>
 	</div>
 	
 	<div>
-		<sub data-ns-test="block-inline-sub">1</sub>
-		<sub data-ns-test="block-inline-sub">2</sub>
+		<sub data-ns-test="block-inline-sub">Test1</sub>
+		<sub data-ns-test="block-inline-sub">Test2</sub>
 	</div>
 	
     <script type="text/javascript" src="./script.js">
