--- a/main.html
+++ b/main.html
@@ -8,52 +8,54 @@
 
 <body>
 	
-	<div>
-		<button data-ns-test="block-inline-button">Test1</button>
-		<button data-ns-test="block-inline-button">Test2</button>
-	</div>
+	<div data-ns-test="block-inline-button">
+		<button>Test1</button>
+		<button>Test2</button>
+	</div><br>
 	
-	<div data-ns-test="block-inline-div">Test1</div>
-	<div data-ns-test="block-inline-div">Test2</div>
+	<div data-ns-test="block-inline-div">
+	<div>Test1</div>
+	<div>Test2</div>
+	</div><br>
 	
-	<div>
-		<span data-ns-test="block-inline-span">Test1</span>
-		<span data-ns-test="block-inline-span">Test2</span>
-	</div>
+	<div data-ns-test="block-inline-span">
+		<span>Test1</span>
+		<span>Test2</span>
+	</div><br>
 	
-	<div>
-		<p data-ns-test="block-inline-p">Test1</p>
-		<p data-ns-test="block-inline-p">Test2</p>
-	</div>
+	<div data-ns-test="block-inline-p">
+		<p>Test1</p>
+		<p>Test2</p>
+	</div><br>
 	
-	<div>
-		<input data-ns-test="block-inline-input">
-		<input data-ns-test="block-inline-input">
-	</div>
+	<div data-ns-test="block-inline-input">
+		<input alt="sas">
+		<input alt="sas">
+	</div><br>
 	
-	<div>
-		<cite data-ns-test="block-inline-cite">Test1</cite>
-		<cite data-ns-test="block-inline-cite">Test2</cite>
-	</div>
+	<div data-ns-test="block-inline-cite">
+		<cite >Test1</cite>
+		<cite >Test2</cite>
+	</div><br>
 	
-	<div>
-		<code data-ns-test="block-inline-code">Test1</code>
-		<code data-ns-test="block-inline-code">Test2</code>
-	</div>
+	<div data-ns-test="block-inline-code">
+		<code>Test1</code>
+		<code>Test2</code>
+	</div><br>
 	
-	<div>
-		<h1 data-ns-test="block-inline-h1">Test1</h1>
-		<h1 data-ns-test="block-inline-h1">Test2</h1>
-	</div>
+	<div data-ns-test="block-inline-h1">
+		<h1 >Test1</h1>
+		<h1 >Test2</h1>
+	</div><br>
 	
-	<div>
-		<sup data-ns-test="block-inline-sup">Test1</sup>
-		<sup data-ns-test="block-inline-sup">Test2</sup>
-	</div>
+	<div data-ns-test="block-inline-sup">
+		<sup >Test1</sup>
+		<sup >Test2</sup>
+	</div><br>
 	
-	<div>
-		<sub data-ns-test="block-inline-sub">Test1</sub>
-		<sub data-ns-test="block-inline-sub">Test2</sub>
+	<div data-ns-test="block-inline-sub">
+		<sub >Test1</sub>
+		<sub >Test2</sub>
 	</div>
 	
     <script type="text/javascript" src="./script.js">
