--- a/main.html
+++ b/main.html
@@ -44,8 +44,8 @@
 	</div><br>
 	
 	<div data-ns-test="block-inline-h1">
-		<h1 >Test1</h1>
-		<h1 >Test2</h1>
+		<h1 >ans=Test1</h1>
+		<h1 >ans=Test2</h1>
 	</div><br>
 	
 	<div data-ns-test="block-inline-sup">
